# bencode-rs

./: Cargo.toml  README.md
src/: bytes.rs  de.rs  error.rs  lib.rs  ser.rs
