[package]
name = "bencode-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itoa = "1.0.3"
log = "0.4.17"
num-traits = "0.2.15"
serde = { version = "1.0.144", features = ["derive"] }
serde_repr = "0.1.9"
